--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,6 @@ dependencies {
     implementation 'com.larswerkman:HoloColorPicker:1.5'
 
     implementation 'org.greenrobot:eventbus:3.1.1'
+
+    implementation 'com.blankj:utilcodex:1.26.0'
 }
